--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@ When editing node ignore password field if no password is given
 Better support for mobile devices (iPhone, Android, etc)
 Add support for sending bitcoins, generating new address, etc
 Make the block and transaction list more user friendly
+Write a basic installer
